# cocoro

./: .gitmodules  CMakeLists.txt
src/: main.cpp
